--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,6 +20,7 @@ set(BASE_SOURCES
     src/frontend/ast/expressions/unary_expression.cpp
 
     src/frontend/ast/statements/statement.cpp
+    src/frontend/ast/statements/function.cpp
     src/frontend/ast/statements/import_statement.cpp
     src/frontend/ast/statements/module_statement.cpp
     src/frontend/ast/statements/variable_declaration.cpp
