Add symbol table and identifier type-checking

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,6 +64,7 @@ set(BASE_SOURCES
     src/types/unknown_type.cpp
     src/types/type_inferrer.cpp
     src/types/type_checker.cpp
+    src/types/symbol_table.cpp
 
     src/logging/color_attributes.cpp
     src/logging/colors.cpp
