Major parser/types refactoring
* Shared type cache, no new'ed types outside
* Use templated static functions for creating expressions and statements
* Add void type
* Remove TypeDeleter custom deleter since there is no need for it anymore

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,8 @@ set(BASE_SOURCES
     src/types/type_checker.cpp
     src/types/scope.cpp
     src/types/symbol_table.cpp
+    src/types/void_type.cpp
+    src/types/type_cache.cpp
 
     # Errors
     src/errors/error.cpp
