--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -54,9 +54,12 @@ set(TEST_RUNNER_SOURCES
     ${PROJECT_SOURCE_DIR}/src/types/float_type.cpp
     ${PROJECT_SOURCE_DIR}/src/types/function_type.cpp
     ${PROJECT_SOURCE_DIR}/src/types/integer_type.cpp
+    ${PROJECT_SOURCE_DIR}/src/types/optional.cpp
     ${PROJECT_SOURCE_DIR}/src/types/str_type.cpp
     ${PROJECT_SOURCE_DIR}/src/types/type.cpp
     ${PROJECT_SOURCE_DIR}/src/types/unknown_type.cpp
+    ${PROJECT_SOURCE_DIR}/src/types/void_type.cpp
+    ${PROJECT_SOURCE_DIR}/src/types/type_cache.cpp
 
     # Utils
     ${PROJECT_SOURCE_DIR}/src/utils/endian.cpp
