--- a/src/bin/korec/CMakeLists.txt
+++ b/src/bin/korec/CMakeLists.txt
@@ -31,7 +31,9 @@ set(_KORE_COMPILER_SOURCES
 #     src/bin/korec/main.cpp
 # )
 
-add_definitions("-DNDEBUG -g3 -O1")
+add_definitions("-DNDEBUG")
+add_definitions("-g3")
+add_definitions("-O1")
 
 add_executable(${KORE_COMPILER_NAME} ${_KORE_COMPILER_SOURCES})
 
