--- a/src/bin/kore/CMakeLists.txt
+++ b/src/bin/kore/CMakeLists.txt
@@ -1,6 +1,8 @@
 set(KORE_VM_NAME "kore")
 
 set(KORE_VM_SOURCES
+    ${KORE_SCANNER_SOURCES}
+    ${KORE_PARSER_SOURCES}
     ${KORE_AST_SOURCES}
     ${KORE_AST_EXPRESSION_SOURCES}
     ${KORE_AST_STATEMENT_SOURCES}
@@ -9,7 +11,9 @@ set(KORE_VM_SOURCES
     ${KORE_TOP_LEVEL_SOURCES}
     ${KORE_UTF8_SOURCES}
     ${KORE_UTILS_SOURCES}
-    ${KORE_TARGET_BYTECODE_SOURCES}
+    ${KORE_TARGETS_BYTECODE_SOURCES}
+    ${KORE_KIR_SOURCES}
+    ${KORE_ERRORS_SOURCES}
 
     # Files specific to kore
     repl.cpp
@@ -17,7 +21,13 @@ set(KORE_VM_SOURCES
     main.cpp
 )
 
+add_definitions("-DNDEBUG")
+add_definitions("-g3")
+add_definitions("-O1")
+
 add_executable(${KORE_VM_NAME} ${KORE_VM_SOURCES})
+
+include_directories(${KORE_VM_NAME} ${KORE_INCLUDE_DIRS})
 
 target_compile_options(${KORE_VM_NAME} PUBLIC ${KORE_SHARED_COMPILE_FLAGS})
 
