Rename some files

--- a/src/bin/koredis/CMakeLists.txt
+++ b/src/bin/koredis/CMakeLists.txt
@@ -22,7 +22,7 @@ set(KORE_DISASSEMBLER_SOURCES
     # decode_instruction.cpp
     # instruction.cpp
     options.cpp
-    output_module.cpp
+    dump_module.cpp
     main.cpp
 )
 
