Implement basic function calls

--- a/src/bin/kore/CMakeLists.txt
+++ b/src/bin/kore/CMakeLists.txt
@@ -14,6 +14,7 @@ set(KORE_VM_SOURCES
     ${KORE_TARGETS_BYTECODE_SOURCES}
     ${KORE_KIR_SOURCES}
     ${KORE_ERRORS_SOURCES}
+    ${KORE_ANALYSIS_SOURCES}
 
     # Files specific to kore
     repl.cpp
