--- a/src/bin/korec/CMakeLists.txt
+++ b/src/bin/korec/CMakeLists.txt
@@ -20,6 +20,7 @@ set(_KORE_COMPILER_SOURCES
     ${KORE_UTILS_SOURCES}
     ${KORE_UTF8_SOURCES}
     ${KORE_TARGETS_BYTECODE_SOURCES}
+    ${KORE_ANALYSIS_SOURCES}
 
     options.cpp
     main.cpp
